# pdf2epubEX

./: 1  现代家政人才培养方案-150dpi-jpg.epub
AI助手聊天记录/: 003.txt  004.txt  005.txt  006.txt
epub_extracted/OEBPS/: base.min.css  content.opf  mybook.css  mybook0001.xhtml  mybook0002.xhtml  mybook0003.xhtml  mybook0004.xhtml  mybook0005.xhtml  mybook0006.xhtml  mybook0007.xhtml  mybook0008.xhtml  mybook0009.xhtml  mybook0010.xhtml  mybook0011.xhtml  mybook0012.xhtml  mybook0013.xhtml  mybook0014.xhtml  mybook0015.xhtml  mybook0016.xhtml  mybook0017.xhtml  mybook0018.xhtml  mybook0019.xhtml  mybook0020.xhtml  mybook0021.xhtml  mybook0022.xhtml  mybook0023.xhtml  mybook0024.xhtml  mybook0025.xhtml  mybook0026.xhtml  mybook0027.xhtml  mybook0028.xhtml  mybook0029.xhtml  mybook0030.xhtml  mybook0031.xhtml  mybook0032.xhtml  mybook0033.xhtml  mybook0034.xhtml  mybook0035.xhtml  mybook0036.xhtml  mybook0037.xhtml  (+25 more)
pdf2epub/: .gitignore  README.md  filetree.sh  main.py  requirements.txt
pdf2epub-paddle/: .gitignore  README.md  README_zh.md  epub  pdf2epub_paddle.py  pyproject.toml
pdf2epub/docs/marker/: mark2epub_README.md
pdf2epub/modules/: mark2epub.py  pdf2md.py
pdf2epub/modules/postprocessing/: prompt.txt  template.py
